# game-programming

./: .gitignore  .qmake.stash  .travis.yml  CMakeLists.txt  GAMETOPIC.md  Makefile  README.md  build.sh  clean.sh  compile-win-mingw.cmake  game-programming.pro  game-programming.sublime-workspace  levelCreator.py  linkAssets.sh  release.sh  travis_get_glfw3.sh
assets/gimp/: Cloud.xcf
assets/images/: icons.icns
assets/levels/: 00000-00001.lvl  00000-00002.lvl  00000-00003.lvl  fffff-00000.lvl  fffff-00001.lvl
assets/meshes/: fat_woman.mtl
assets/shaders/: cloth.fsh  cloth.vsh  cloudParticle.fsh  cloudParticle.gsh  cloudParticle.vsh  cube.fsh  cube.vsh  debug.fsh  debug.gsh  debug.vsh  depth.fsh  depth.vsh  lightningShader.fsh  lightningShader.vsh  loadingScreen.fsh  loadingScreen.vsh  low_poly_man.fsh  low_poly_man.vsh  particle.fsh  skyDome.fsh  skyDome.vsh  skybox.fsh  skybox.vsh  terrain.fsh  terrain.vsh
assets/textures/: cloud_particle.xcf
assets/videos/: game.webm
include/: CollisionModel.hh  Game.hh  GameState.hh  Helper.hh  IntroState.hh  Level.hh  LoadingScreen.hh  Model.hh  OurArrayBuffer.hh  Plane.hh  PlayState.hh  README.md  Sphere.hh  TextureLoadStore.h  TextureLoadStore.hh  easing.hh  game.h  gamestate.h  helper.h  introstate.h  main.h  mainwindow.h  model.h  playstate.h  window.h
include/GUI/: Button.hh  GUIObject.hh  Gui.hh  PerfGraph.hh  PositionGUI.hh  Text.hh  common.hh  elements.hh  nanovg.hh
include/gui/: guibase.h
include/world/: Character.hh  Cloth.hh  Cloud.hh  CloudParticle.hh  Clouds.hh  Constraint.hh  Entity.hh  IScaleable.hh  Object.hh  Particle.hh  SkyDome.hh  SkyScraper.hh  Skybox.hh  Terrain.hh  TestObject.hh  Vec3.hh  entity.h  skybox.h  testobject.h
lib/: README.md
lib/acgl/: CMakeLists.txt
lib/acgl/include/ACGL/Math/: Constants.hh
lib/acgl/include/ACGL/OpenGL/: GL.hh
lib/acgl/include/ACGL/OpenGL/Creator/: ShaderParser.hh
lib/acgl/include/ACGL/OpenGL/Objects/: ShaderProgram.hh  Texture.hh
lib/acgl/include/ACGL/Utils/: MemoryMappedFileWinImpl.hh
lib/acgl/include/nv_dds/: nv_dds.h
lib/acgl/src/ACGL/: ACGL.cc
lib/acgl/src/ACGL/HardwareSupport/: GamePad.cc
lib/acgl/src/ACGL/OpenGL/Creator/: ShaderParser.cc
lib/acgl/src/ACGL/OpenGL/Data/: GeometryDataLoadStoreOBJ.cc  TextureData.cc
lib/acgl/src/ACGL/OpenGL/Objects/: VertexArrayObject.cc
lib/acgl/src/nv_dds/: nv_dds.cpp
lib/glfw/examples/: boing.c  gears.c  particles.c  splitview.c  wave.c
lib/glfw/tests/: cursor.c
lib/nanovg/: CMakeLists.txt
src/: CMakeLists.txt  CollisionModel.cpp  Game.cpp  Helper.cpp  IntroState.cpp  Level.cpp  LoadingScreen.cpp  Model.cpp  PlayState.cpp  README.md  TextureLoadStore.cpp  game.cpp  helper.cpp  introstate.cpp  main.cpp  mainwindow.cpp  metadata.yaml  model.cpp  playstate.cpp  slides.md  window.cpp
src/GUI/: Button.cpp  GUIObject.cpp  Gui.cpp  PerfGraph.cpp  PositionGUI.cpp  Text.cpp  common.cpp
src/gui/: guiElements.md  widget.cpp
src/images/: particle_grid.eps  particle_grid.ps
src/style/: template.tex
src/world/: Character.cpp  Cloth.cpp  Cloud.cpp  Clouds.cpp  Constraint.cpp  Entity.cpp  Object.cpp  Particle.cpp  SkyDome.cpp  SkyScraper.cpp  Skybox.cpp  Terrain.cpp  TestObject.cpp  Vec3.cpp  entity.cpp  skybox.cpp  testobject.cpp
test/: README.md
